Added sort by vendor

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -21,6 +21,7 @@
     <button class="logout_btn" onclick="location.href='/auth/logout/'" type="button"/>
   </div>
  </div>
+
 {% block content %}
 <div class="title"><p class="pulsate">Select server...</p></div>
 <div class="big">
@@ -62,7 +63,6 @@
 
 <br>
 
-    <div class="title"><p class="pulsate">Select server...</p></div>
     <div class="big">
 
      {% for i,k in vendors_enum %}
@@ -75,10 +75,11 @@
                       <button class="accordion pasv">{{ n }}</button>
                       {% endif %}
                       <ul class="inside">
-                            <li style="margin-bottom: 5px;"><a target="_blank" style="color:red;font-size: 14px;text-decoration: underline;" href="http://{{ n }}">http://{{ n }}</a></li>
                             <li><input type="checkbox" onclick="SelectAll(this)"/>Select all</li>
                             {% for j in all_group_ssids %}
+                              OLOLO:  {{ j.name }}
                                 {% if j.vendor.name == n %}
+                                    Da tvoyu mat: j.vendor.name={{ j.vendor.name }}  n={{ n }}
                                     {% if j.name in ssids_busy %}
                                         {% if j.status %}
                                             <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}" disabled checked onclick="update_ssidlist(this)"/><a style="text-decoration: none;color:red" href="/ssid/{{ j.name }}"><span class="{{ j.name }}">{{ j.name }} - Busy </span></a></li>
