--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -29,6 +29,7 @@
      {% for i,k in servers_enum %}
           <div class="server_column">
               {% for n in k %}
+              Auuu, N =    {{ n }}
                   <div class="panel">
                       {% if n in servers_with_up_ssids %}
                       <button class="accordion act">{{ n }}</button>
