Added sort by vendor

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -63,8 +63,7 @@
 
 <br>
 
-<div>Eto zona servera suka!</div>
-    <div class="big">
+    <div class="big-server">
 
      {% for i,k in vendors_enum %}
           <div class="server_column">
@@ -101,7 +100,7 @@
      {% endfor %}
 
 <br>
-
+</div>
 <!--Footer part -->
 <div class="footer">
 <input type="checkbox" name="Timer" style= "margin-left:auto;margin-right:auto;display: none;text-align: center;margin-bottom:5px; " id="timercheckbox" onclick="update_timer(this)">
@@ -118,7 +117,7 @@
 
 </div>
 </div>
-</div>
+
 
 
 <script language="JavaScript">
