--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -50,7 +50,16 @@ ul.inside {
  /*  column-count: 3; */
  }
 
-
+.big-server {
+    display: none;
+    width: 780px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  /*  -webkit-column-count: 3; /* Chrome, Safari, Opera */
+/*   -moz-column-count: 3; /* Firefox */
+ /*  column-count: 3; */
+ }
 
 .server_column {
     width:250px;
