Added sort by vendor

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -176,7 +176,7 @@ $('span').mouseleave(function(){
 
 //Toggle view
 function change_view(toggle) {
- if (timer.checked){
+ if (toggle.checked){
         $(".big").fadeOut("slow");
         $(".big-vendor").fadeIn("slow");
     }
