Added sort by vendor

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -23,6 +23,7 @@
  </div>
 
 {% block content %}
+ <div>
 <div class="title"><p class="pulsate">Select server...</p></div>
 <label class="switch">
 	<input class="switch-input" type="checkbox" onclick="change_view(this)"/>
@@ -119,6 +120,7 @@
 <span style="display: none;color: red;font-size: 16px;" id="no_one_chosen">Please, choose at least one ssid</span>
 <div id="errors" style="display: none;color: red;font-size: 18px"></div>
 
+</div>
 </div>
 
 
