Added sort by vendor

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -23,7 +23,7 @@
  </div>
 
 {% block content %}
- <div>
+ <div class="big-container">
 <div class="title"><p class="pulsate">Select server...</p></div>
 <label class="switch">
 	<input class="switch-input" type="checkbox" onclick="change_view(this)"/>
