--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -39,6 +39,13 @@ ul.inside {
     margin-top:0px;
 }
 
+.big-container {
+    width: 780px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+ }
+
 
 .big {
     width: 780px;
