--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -24,7 +24,7 @@
 
 {% block content %}
  <div class="big-container">
-<div class="title"><p class="pulsate">Select server...</p></div>
+<!--<div class="title"><p class="pulsate">Select server...</p></div> -->
 <label class="switch">
 	<input class="switch-input" type="checkbox" onclick="change_view(this)"/>
 	<span class="switch-label" data-on="Server" data-off="Vendor"></span>
