--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -311,7 +311,7 @@ ul.inside {
 	width: 100px;
 	height: 30px;
 	padding: 3px;
-	margin: 0 10px 10px 0;
+	margin: 0 10px 10px 20px;
 	background: linear-gradient(to bottom, #eeeeee, #FFFFFF 25px);
 	background-image: -webkit-linear-gradient(top, #eeeeee, #FFFFFF 25px);
 	border-radius: 18px;
