--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -330,7 +330,7 @@ ul.inside {
 	position: relative;
 	display: block;
 	height: inherit;
-	font-size: 10px;
+	font-size: 14px;
 	text-transform: uppercase;
 	background: #eceeef;
 	border-radius: inherit;
@@ -352,13 +352,13 @@ ul.inside {
 	content: attr(data-off);
 	right: 11px;
 	color: #aaaaaa;
-	text-shadow: 0 1px rgba(255, 255, 255, 0.5);
+	/*text-shadow: 0 1px rgba(255, 255, 255, 0.5); */
 }
 .switch-label:after {
 	content: attr(data-on);
 	left: 11px;
 	color: #FFFFFF;
-	text-shadow: 0 1px rgba(0, 0, 0, 0.2);
+	/*text-shadow: 0 1px rgba(0, 0, 0, 0.2); */
 	opacity: 0;
 }
 .switch-input:checked ~ .switch-label {
