--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -330,9 +330,9 @@ ul.inside {
 	position: relative;
 	display: block;
 	height: inherit;
-	font-size: 14px;
+	font-size: 12px;
 	text-transform: uppercase;
-	background: #eceeef;
+	background: #eee;
 	border-radius: inherit;
 	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.15);
 	box-sizing:content-box;
@@ -351,14 +351,14 @@ ul.inside {
 .switch-label:before {
 	content: attr(data-off);
 	right: 11px;
-	color: #aaaaaa;
+	color: #444;
 	/*text-shadow: 0 1px rgba(255, 255, 255, 0.5); */
 }
 .switch-label:after {
 	content: attr(data-on);
 	left: 11px;
-	color: #FFFFFF;
-	/*text-shadow: 0 1px rgba(0, 0, 0, 0.2); */
+	color: #444;
+	text-shadow: 0 1px rgba(0, 0, 0, 0);
 	opacity: 0;
 }
 .switch-input:checked ~ .switch-label {
