--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -168,10 +168,10 @@ for (i = 0; i < acc.length; i++) {
 
 //mouseleave
 $(document).ready(function(){
- $('span').mouseenter(function(){
+ $('span').not(".switch-label").mouseenter(function(){
         $(this).fadeTo('fast', 0.5);
    });
-$('span').mouseleave(function(){
+$('span').not(".switch-label").mouseleave(function(){
         $(this).fadeTo('fast', 1);
     })
 });
