Added sort by vendor

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -30,6 +30,7 @@
 	<span class="switch-label" data-on="Server" data-off="Vendor"></span>
 	<span class="switch-handle"></span>
 </label>
+ <button class="admin_btn" onclick="location.href='/admin/'" type="button"/>
     <div class="big">
      {% for i,k in servers_enum %}
           <div class="server_column">
