--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -302,6 +302,29 @@ ul.inside {
 /*Run button*/
 
 
+/*Admin button*/
+.logout_btn {
+    border: 0;
+	width: 70px;
+	height: 23px;
+	background: url('images/admin_btn.png') top left no-repeat;
+    background-position: center;
+    background-size: 100% 100%;
+	cursor:pointer;
+    padding-bottom: 3px;
+}
+.logout_btn:hover {
+    background: url('images/admin_hov_btn.png') top left no-repeat;
+    background-position: center;
+    background-size: 100% 100%; }
+
+.logout_btn:active {
+	background: url('images/admin_hov_btn.png') top left no-repeat;
+    background-position: center;
+    background-size: 100% 100%;
+}
+/*Admin button*/
+
 
 /* View toggle checkbox */
 .switch {
