--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -25,13 +25,16 @@
 {% block content %}
  <div class="big-container">
 <!--<div class="title"><p class="pulsate">Select server...</p></div> -->
-<label class="switch">
+ <div class="button-pannel">
+ <label class="switch">
 	<input class="switch-input" type="checkbox" onclick="change_view(this)"/>
 	<span class="switch-label" data-on="Server" data-off="Vendor"></span>
 	<span class="switch-handle"></span>
-</label>
+ </label>
  <button class="admin_btn" onclick="location.href='/admin/'" type="button"/>
-    <div class="big">
+ </div>
+
+     <div class="big">
      {% for i,k in servers_enum %}
           <div class="server_column">
               {% for n in k %}
