--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -19,6 +19,7 @@
   <div class="login_form">
     <a href="/auth/profile" style="color: black;text-decoration: none;">Profile ({{ username }})</a>
     <button class="logout_btn" onclick="location.href='/auth/logout/'" type="button"/>
+    <button class="admin_btn" onclick="location.href='/admin/'" type="button"/>
   </div>
  </div>
 
