--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -305,6 +305,7 @@ ul.inside {
     background-size: 100% 100%;
 	cursor:pointer;
     padding-bottom: 3px;
+    margin-left: 5px;
 }
 .admin_btn:hover {
     background: url('images/admin_hov_btn.png') top left no-repeat;
