--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -19,7 +19,9 @@
   <div class="login_form">
     <a href="/auth/profile" style="color: black;text-decoration: none;">Profile ({{ username }})</a>
     <button class="logout_btn" onclick="location.href='/auth/logout/'" type="button"/>
-    <button class="admin_btn" onclick="location.href='/admin/'" type="button"/>
+    {% if user_object.is_staff %}
+     <button class="admin_btn" onclick="location.href='/admin/'" type="button"/>
+    {% endif %}
   </div>
  </div>
 
