--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -329,11 +329,10 @@ ul.inside {
 	height: 30px;
 	padding: 3px;
 	margin: 0 10px 10px 10px;
-/*	background: linear-gradient(to bottom, #eeeeee, #FFFFFF 25px);
-	background-image: -webkit-linear-gradient(top, #eeeeee, #FFFFFF 100px); */
+	background: linear-gradient(to bottom, #eeeeee, #FFFFFF 25px);
+	background-image: -webkit-linear-gradient(bottom, #eeeeee, #FFFFFF 25px);
 	border-radius: 18px;
-/*	box-shadow: inset 0 -1px white, inset 0 1px 1px rgba(0, 0, 0, 0.05); */
-    background-color: #444;
+	box-shadow: inset 0 -1px white, inset 0 1px 1px rgba(0, 0, 0, 0.05);
 	cursor: pointer;
 	box-sizing:content-box;
 }
