Added meta to datebase

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -454,7 +454,7 @@ else {
 <div id="login_container">
 	<div id="form_container">
         <div class="login-text"><img width="256px" height="256px" src="{% static 'images/wifi.png' %}"><div style="position: relative;right: -220px;top:-55px" class="pulsate-led"><img height=14px width=14px src="{% static 'images/wifi-led.png' %}"></div></div>
-		<form method='POST' action="/auth/login/">
+		<form method='POST' action="/auth/login/" autocomplete="off">
             {% csrf_token %}
 		<input type='text' onFocus="if(this.value=='Login')this.value=''" onblur="if(this.value=='')this.value='Login'" name='username' value='Login' class='text_input' />
 		<input type='password' onFocus="if(this.value=='Password')this.value=''" onblur="if(this.value=='')this.value='Password'" name='password' value='Password' class='text_input' />
