--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -185,10 +185,12 @@ function change_view(toggle) {
  if (toggle.checked){
         $(".big").css("display","none");
         $(".big-vendor").css("display","block")
+        $("#run").css("display","none")
     }
     else {
         $(".big-vendor").css("display","none");
         $(".big").css("display","block");
+        $("#run").css("display","none")
     }
 }
 
