--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -17,7 +17,7 @@
 {% if username %}
  <div id="header">
   <div class="login_form">
-    <a href="/profile" style="color: black;"><img width="50px" height="50px" src="{% static 'images/person.png' %}" acl={{ username }}></a>
+    <a href="/profile" style="color: black;"><img width="40px" height="40px" src="{% static 'images/person.png' %}" alt={{ username }}></a>
     <button class="logout_btn" onclick="location.href='/auth/logout/'" type="button"/>
     {% if user_object.is_staff %}
      <button class="admin_btn" onclick="location.href='/admin/'" type="button"/>
