--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -298,9 +298,9 @@ ul.inside {
 /*Admin button*/
 .admin_btn {
     border: 0;
-	width: 70px;
-	height: 23px;
-	background: url('images/admin_btn.png') top left no-repeat;
+	width: 30px;
+	height: 30px;
+	background: url('images/settings.png') top left no-repeat;
     background-position: center;
     background-size: 100% 100%;
 	cursor:pointer;
