--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -20,7 +20,7 @@
  <div id="header">
   <div class="login_form">
     <!--<a href="/profile" style="color: black;"><img width="30px" height="30px" src="{% static 'images/person.png' %}"></a> -->
-    <button class="profile_btn" onclick="location.href='/profile'" type="button"/>
+    <button class="profile_btn" onclick="location.href='/profile'" type="button" {{ username }}/>
     <button class="logout_btn" onclick="location.href='/auth/logout/'" type="button"/>
     {% if user_object.is_staff %}
      <button class="admin_btn" onclick="location.href='/admin/'" type="button"/>
