Change timeout settings for vendors

--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -166,7 +166,7 @@ ul.inside {
     margin-top: 2px;
 	width: 27px;
 	height: 27px;
-	background: url('images/person1.png') top left no-repeat;
+	background: url('images/person.png') top left no-repeat;
     background-position: center;
     background-size: 100% 100%;
 	cursor:pointer;
