Added 'add' page

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -37,6 +37,7 @@
 	<span class="switch-label" data-on="Server" data-off="Vendor"></span>
 	<span class="switch-handle"></span>
  </label>
+ <a href="add.html">Add</a>
 
      <div class="big">
      {% for i,k in servers_enum %}
