--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -15,7 +15,7 @@
       </select>
   </li>
  <li style="display:inline"><label for="device">Device: </label>
-<select id='vendor' name="vendor" multiple>
+<select id='device' name="device" multiple>
     {% for i in device_queryset %}
           <option>{{ i.hostname }} ({{ i.name }})</option>
     {% endfor %}
