Added 'add' page

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -31,7 +31,7 @@
 
   </li>
 </ul>
-<li><input type="submit" value="Add"></li>
+<input type="submit" value="Add">
 </form>
 <input class="link-to-main" type="button" onclick="location.href='/';"/>
 </div>
