Added 'add' page

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -31,26 +31,16 @@
 
   </li>
 </ul>
-<input type="submit" value="Add">
+<input type="button" id="Add" onClick="add()" />
 </form>
 <input class="link-to-main" type="button" onclick="location.href='/';"/>
 </div>
 
 
 <script language="JavaScript">
-{% autoescape off %}
-time={{ instance.remaining_time }},
-{% endautoescape %}
-r=document.getElementById('r'),tmp=time;
-countdown_timer = setInterval(function(){
-var c=time--,m=(c/60)>>0,s=(c-m*60)+'';
-r.textContent=''+m+':'+(s.length>1?'':'0')+s
-tmp!=0||(tmp=time);
-if (time===0) {
-clearInterval(countdown_timer)
-location.reload();
+function run() {
+    name=document.getElementById('name').value;
+    console.log('name='+name);
 }
-},1000);
-
 </script>
 {% endblock %}
