--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -155,7 +155,7 @@ else {
 }
 
 
-//accordeon popup buttons
+//accordion popup buttons
 var acc = document.getElementsByClassName("accordion");
 var i;
 
