Added 'add' page

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -31,7 +31,7 @@
 
   </li>
 </ul>
-<input type="button" id="Add" onClick="add()" />
+<input type="button" value='add' id="Add" onClick="add()" />
 </form>
 <input class="link-to-main" type="button" onclick="location.href='/';"/>
 </div>
