Added 'add' page

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -38,7 +38,7 @@
 
 
 <script language="JavaScript">
-function run() {
+function add() {
     name=document.getElementById('name').value;
     console.log('name='+name);
 }
