Added 'add' page

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -49,9 +49,9 @@ function add() {
     console.log('name='+name+' '+'vendor='+vendor_selected_values);
 }
 
-function vendorlist(sel){
-alert(sel.options[sel.selectedIndex].text);
-}
+//function vendorlist(sel){
+//alert(sel.options[sel.selectedIndex].text);
+//}
 
 </script>
 {% endblock %}
