--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -8,7 +8,7 @@
 <ul class="ssid-detail-list">
 <li><label for="name">Name: </label><input style="width:120px;margin-left:auto;margin-right:auto;margin-bottom:5px;" type="text" id="name" name="name"	 required></li>
 <li><label for="vendor">Vendor: </label>
-<select id='vendor' name="vendor" multiple onChange="vendorlist(this);">
+<select id='vendor' name="vendor" multiple >
     {% for i in vendor_queryset %}
           <option>{{ i.name }}</option>
     {% endfor %}
