--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -48,7 +48,7 @@ function add() {
     vendor_selected_values.push(vendor.selectedOptions[i].value)
 }
     for ( var i = 0; i < device.selectedOptions.length; i++) {
-    vendor_selected_values.push(device.selectedOptions[i].value)
+    device_selected_values.push(device.selectedOptions[i].value)
 }
     console.log('name='+name+' '+'vendor='+vendor_selected_values+'device='+device_selected_values+'server='+server);
 
