--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -60,7 +60,7 @@ function add() {
     $.ajax({
             url : "/ssid_add/",
             type : "POST",
-            data : { name : name, vendor:vendor_selected_values,'csrfmiddlewaretoken': token,device:device_selected_values,server:server }, // data sent with the post request
+            data : { name : name, vendor:JSON.stringify(vendor_selected_values),'csrfmiddlewaretoken': token,device:JSON.stringify(device_selected_values),server:server }, // data sent with the post request
 
         // handle a successful response
 
