--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -15,6 +15,9 @@
       </select>
   </li>
  <li style="display:inline"><label for="device">Device: </label>
+ <li><label for="custom_device">Select custom devices</label>
+<input type="checkbox" id="custom" name="custom">
+</li>
 <select id='device' name="device" multiple>
     {% for i in device_queryset %}
           <option value={{ i.name }}>{{ i.hostname }} ({{ i.name }})</option>
