Added 'add' page

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -5,8 +5,10 @@
 <div class="ssid-detail-container">
 <img width="256px" height="256px" src="{% static 'images/wifidevice.png' %}">
 <form action="/">
+
 <ul class="ssid-detail-list">
 <li><label for="name">Name: </label><input style="width:120px;margin-left:auto;margin-right:auto;margin-bottom:5px;" type="text" id="name" name="name"	 required></li>
+
 <li id="vendor_li"><label for="vendor">Vendor: </label>
 <select id='vendor' name="vendor" multiple >
     {% for i in vendor_queryset %}
@@ -14,10 +16,10 @@
     {% endfor %}
       </select>
   </li>
- <li><label for="custom_device">Select custom devices</label>
-<input type="checkbox" id="custom" name="custom" onclick="toggleCheckbox(this)">
-</li>
- <li id="device_li"><label for="device">Device: </label>
+
+<li><label for="custom_device">Select custom devices</label><input type="checkbox" id="custom" name="custom" onclick="toggleCheckbox(this)"></li>
+
+<li id="device_li" style="display: none"><label for="device">Device: </label>
 <select style="display:none" id='device' name="device" multiple>
     {% for i in device_queryset %}
           <option value={{ i.name }}>{{ i.hostname }} ({{ i.name }})</option>
