--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -20,7 +20,7 @@
 <li><label for="custom_device">Select custom devices</label><input type="checkbox" id="custom" name="custom" onclick="toggleCheckbox(this)"></li>
 
 <li id="device_li" style="display: none"><label for="device">Device: </label>
-<select style="display:none" id='device' name="device" multiple>
+<select id='device' name="device" multiple>
     {% for i in device_queryset %}
           <option value={{ i.name }}>{{ i.hostname }} ({{ i.name }})</option>
     {% endfor %}
@@ -35,6 +35,7 @@
   </select>
 
   </li>
+
 </ul>
 <input type="button" value='add' id="Add" onClick="add()" />
 {% csrf_token %}
